unpackaged/main/default/objects/GC_Order__c/GC_Order__c.object-meta.xml
<CustomObject>
    <description>Contains the Custom Object Class that comprises of GES Order Tasks and Vendor Orders.</description>
    <label>GES Order</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GES Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>