unpackaged/main/default/objects/GC_Order__c/fields/Booth_Area__c.field-meta.xml
<CustomField>
    <fullName>Booth_Area__c</fullName>
    <description>Booth Area for the Entire Order.   Booth area affects discounts of items within an order.</description>
    <inlineHelpText>Booth Area for the Entire Order.   Booth area affects discounts of items within an order.</inlineHelpText>
    <label>Delivery Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>