unpackaged/main/default/objects/GC_Order__c/fields/Booth_Area_ID__c.field-meta.xml
<CustomField>
    <fullName>Booth_Area_ID__c</fullName>
    <description>Booth Area ID known by the External System.  Used for mapping the Item Discounts associated with a booth area.</description>
    <inlineHelpText>Booth Area ID known by the External System.  Used for mapping the Item Discounts associated with a booth area.</inlineHelpText>
    <label>Booth Area ID (Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>