unpackaged/main/default/objects/GC_Order__c/fields/Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Time__c</fullName>
    <description>Completion Date / Time as Determined by Booth Area.</description>
    <inlineHelpText>Completion Date / Time as Determined by Booth Area.</inlineHelpText>
    <label>Completion Date/Time</label>
    <type>DateTime</type>
</CustomField>