unpackaged/main/default/objects/GC_Order__c/fields/Connect2_Show__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Show Opportunity this Order is assigned to.</description>
    <inlineHelpText>Parent Show Opportunity this Order is assigned to.</inlineHelpText>
    <label>Project Central Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>