unpackaged/main/default/objects/GC_Order__c/fields/Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Time__c</fullName>
    <description>Delivery Date / Time as Determined by Booth Area.</description>
    <inlineHelpText>Delivery Date / Time as Determined by Booth Area.</inlineHelpText>
    <label>Delivery Date/Time</label>
    <type>DateTime</type>
</CustomField>