unpackaged/main/default/objects/GC_Order__c/fields/HideSourceOrderCodes__c.field-meta.xml
<CustomField>
    <fullName>HideSourceOrderCodes__c</fullName>
    <formula>Connect2_Show__r.HideSourceOrderCodes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Source Order # in Remarks</label>
    <type>Checkbox</type>
</CustomField>