unpackaged/main/default/objects/GC_Order__c/fields/Order_Area_Description__c.field-meta.xml
<CustomField>
    <fullName>Order_Area_Description__c</fullName>
    <description>Additonal Description for the Order.</description>
    <inlineHelpText>Additonal Description for the Order.</inlineHelpText>
    <label>Area Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>