unpackaged/main/default/objects/GC_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Order Number used from the External System.  When this is filled out, the External CORE instance knows about the order and has a direct link of this order.  Field is read only on the page layouts and system but can be used for display purposes.</description>
    <inlineHelpText>Order Number used from the External System.</inlineHelpText>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>