unpackaged/main/default/objects/GC_Order__c/fields/ParentCloneOrder__c.field-meta.xml
<CustomField>
    <fullName>ParentCloneOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Clone Order</label>
    <referenceTo>GC_Order__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>