unpackaged/main/default/objects/GC_Order__c/fields/Removal_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date_Time__c</fullName>
    <description>Removal Date / Time as Determined by Booth Area.</description>
    <inlineHelpText>Removal Date / Time as Determined by Booth Area.</inlineHelpText>
    <label>Removal Date/Time</label>
    <type>DateTime</type>
</CustomField>