unpackaged/main/default/objects/GC_Order__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <description>Formula to Connect2 Show&#39;s Show Name</description>
    <formula>Connect2_Show__r.Show_Name__c</formula>
    <inlineHelpText>Show Name for Connect2 Show</inlineHelpText>
    <label>Show Name</label>
    <type>Text</type>
</CustomField>