unpackaged/main/default/objects/GC_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <description>Status of the Order.  Defaults to &#39;New&#39; and will clearly indicate the status of the order state and what its in.</description>
    <inlineHelpText>Status of the Order.</inlineHelpText>
    <label>Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>