unpackaged/main/default/objects/GC_Order__c/fields/Type_Of_User__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_User__c</fullName>
    <formula>If(CONTAINS( Email__c , &quot;@ges.com&quot;),&quot;External&quot;,&quot;Internal&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Of User</label>
    <type>Text</type>
</CustomField>