unpackaged/main/default/objects/GC_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Show_Name__c</columns>
    <columns>NAME</columns>
    <columns>Connect2_Show__c</columns>
    <columns>Booth_Area__c</columns>
    <columns>Order_Area_Description__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Delivery_Date_Time__c</columns>
    <columns>Completion_Date_Time__c</columns>
    <columns>Removal_Date_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>