unpackaged/main/default/objects/GC_Order__c/listViews/jj.listView-meta.xml
<ListView>
    <fullName>jj</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_Name__c</field>
        <operation>contains</operation>
        <value>oral and max%</value>
    </filters>
    <label>jj</label>
    <language>en_US</language>
</ListView>