unpackaged/main/default/objects/GC_Order__c/listViews/Order_Template.listView-meta.xml
<ListView>
    <fullName>Order_Template</fullName>
    <columns>NAME</columns>
    <columns>Booth_Area__c</columns>
    <columns>Order_Area_Description__c</columns>
    <columns>Connect2_Show__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Completion_Date_Time__c</columns>
    <columns>Delivery_Date_Time__c</columns>
    <columns>Removal_Date_Time__c</columns>
    <columns>ParentCloneOrder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Connect2_Show__c</field>
        <operation>equals</operation>
        <value>CS-7160</value>
    </filters>
    <label>Blackhat: All Orders</label>
    <language>en_US</language>
</ListView>